--- a/PhotographyTab.html
+++ b/PhotographyTab.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Serena Wang</title>                           <!-- Give Title -->
+    <title>Serena's Photography</title>                           <!-- Give Title -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./HTML file_files/style.css">  <!-- Insert StyleSheet -->
     <link rel="icon" href="https://cardadfar.github.io/stuco_webdev_website/assets/files/cool-icon.png">                    <!-- Insert Icon -->
@@ -12,11 +12,17 @@
 <body>
 	
 	<style type="text/css">
+
+		* {
+			box-sizing: border-box;
+		}
 		
 		body {
 			margin: 0;
 		}
+	
 		/* NAV BAR */
+
 		.nav-bar {
 			width: 100%;
 			height: 50px;
@@ -32,6 +38,7 @@
 			/*position: sticky;
 			top: 0; */
 		}
+
 		.nav-bar > .element {
 			width: 19.5%;
 			line-height: 50px;
@@ -42,33 +49,46 @@
 			font-family: Arial;
 			text-decoration: none;
 		}
+
 		.nav-bar > .element:hover { 
 				text-decoration: underline;
-		}	
+		}
+
 		/* BODY */
+
 		.content {
 			width: 80%;
 			margin-left: 10%;
 		}
-		.introPar {
-			padding-right: 100px;
-			padding-left: 600px;
-			text-align: justify;
-			text-justify: inter-word;
 
+		.Title {
+			padding-right: 0px;
+			padding-left: 100px;
+			padding-top: 50px;
+			font-family: "Helvetica", "Arial", sans-serif;
+			font-size: 30px;
+		}
+
+		.sidebyside {
+			float: left;
+			width: 33.33%;
+			padding-left : 100px;
+			padding-right: 100px;
+			padding-top: 0px;
+			border-width: 5px;
 
 		}
-		.profile {
-			padding-left: 100px;
-			padding-right: 50px;
-			padding-top: 50px;
-			padding-bottom: 50px;
-			background-color: #fbf3d4;
-			margin-right: 100px;
-			margin-left: 100px;
-			margin-top: 50px;
-			font-family: "Helvetica", "Arial", sans-serif;
-			font-size: 50px;
+
+		.photo {
+			padding-right: 5px;
+			padding-left: 5px;
+			margin: 5px;
+		}
+
+		.row::after {
+  			content: "";
+			clear: both;
+			display: table;
 		}
 
 	</style>
@@ -85,17 +105,26 @@
     	<a href="index.html" class="element"> About Me </a>
     </div>
 
- 	<div class="profile">
-    	<img src="Profile.jpg" style="width:536px;height:356px;">
-    	<b align="Bottom" style="margin-left:600px; margin-top:1000px; bottom:0;"> NICE TO MEET YOU. </b>
+    
+ 		
+ 	
+    <div class="Title">
+    	<b> Typology </b>
     </div>
 
-    <div class="introPar">
-		<p align="Right"> Hi, I'm Serena. I'm a sophomore Statistics major at Carnegie Mellon University in Pittsburgh, Pennsylvania. blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah <br>
-		blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah <br>
-		blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah<br>
-		blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah</p>
+    <div class="row">
+ 		<div class="sidebyside">
+ 			<div class="photo">
+    		<img src="shoe1.jpg" style="width:529.4px;height:376.7px;">
+    	</div>
+   		 </div>
+   		 <div class="sidebyside">
+   		 	<div class="photo">
+    		<img src="shoe2.jpg" style="width:529.4px;height:376.7px;">
+		</div>
 	</div>
+	</div>
+
 
 
 
