--- a/ProjectsTab.html
+++ b/ProjectsTab.html
@@ -74,7 +74,7 @@
     </div>
 
     <div class="projects">
-    	<img src="Poster.jpg" style="width:416.6px; height:297.5px">
+    	<img src="Poster.jpg" style="width:416.6px; height:297.5px;">
     </div>  
 
 
