--- a/PhotographyTab.html
+++ b/PhotographyTab.html
@@ -56,13 +56,7 @@
 
 		/* BODY */
 
-		.content {
-			width: 80%;
-			margin-left: 10%;
-		}
-
 		.Title {
-			padding-right: 0px;
 			padding-left: 100px;
 			padding-top: 50px;
 			font-family: "Helvetica", "Arial", sans-serif;
@@ -72,17 +66,20 @@
 		.sidebyside {
 			float: left;
 			width: 33.33%;
+			padding: 5px;
 			padding-left : 100px;
 			padding-right: 100px;
-			padding-top: 0px;
-			border-width: 5px;
+			padding-top: 10px;
+			margin-right: 150px;
 
 		}
 
-		.photo {
-			padding-right: 5px;
-			padding-left: 5px;
-			margin: 5px;
+		.info {
+			padding-left: 100px;
+			padding-top: 100px;
+			padding-right: 100px;
+			font-family: "Helvetica", "Arial", sans-serif;
+			font-size: 20px;
 		}
 
 		.row::after {
@@ -114,19 +111,80 @@
 
     <div class="row">
  		<div class="sidebyside">
- 			<div class="photo">
-    		<img src="shoe1.jpg" style="width:529.4px;height:376.7px;">
-    	</div>
+    		<img src="Images/shoe1.jpg" style="width:570.4px;height:405.7px;">
    		 </div>
    		 <div class="sidebyside">
-   		 	<div class="photo">
-    		<img src="shoe2.jpg" style="width:529.4px;height:376.7px;">
+    		<img src="Images/shoe2.jpg" style="width:570.4px;height:405.7px;">
 		</div>
 	</div>
+
+	<div class="Title">
+		<b> Portraits </b>
+	</div>
+	
+	<div class="row">
+		<div class ="sidebyside">
+			<img src="Images/p1.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/p2.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/p3.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/p4.jpg" style="width:570.4px;height:405.7px;">
+		</div>
 	</div>
 
+	<div class="Title">
+		<b> Structure </b>
+	</div>
+	
+	<div class="row">
+		<div class ="sidebyside">
+			<img src="Images/s3.jpeg" style="width:328.3px;height:420.3px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/s4.jpg" style="width:328.3px;height:420.3px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/s1.jpeg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/s2.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/s5.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/s6.jpg" style="width:328.3px;height:420.3px;">
+		</div>
+	</div>
 
+	<div class="Title">
+		<b> Misc. </b>
+	</div>
 
+	<div class="row">
+		<div class ="sidebyside">
+			<img src="Images/m1.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/m2.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/m3.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+		<div class ="sidebyside">
+			<img src="Images/m4.jpg" style="width:570.4px;height:405.7px;">
+		</div>
+	</div>
+
+	<div class="info">
+		<b> Methodology </b>
+		<p> All photos have been captured with a 50mm film camera, using black and white film. I developed the film in a darkroom and scanned the negatives to upload to Photoshop. With Photoshop, I restored the color and quality of the images that was lost during scanning. I also have physical prints of most images. </p>
+	</div>
 
 
 
