--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 			margin-top: 50px;
 			font-family: "Helvetica", "Arial", sans-serif;
 			font-size: 50px;
+			text-justify: inter-word;
 		}
 
 	</style>
@@ -86,7 +87,7 @@
     </div>
 
  	<div class="profile">
-    	<img src="Profile.jpg" style="width:536px;height:356px;">
+    	<img src="Images/Profile.jpg" style="width:536px;height:356px;">
     	<b align="Bottom" style="margin-left:600px; margin-top:1000px; bottom:0;"> NICE TO MEET YOU. </b>
     </div>
 
