--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./HTML file_files/style.css">  <!-- Insert StyleSheet -->
     <link rel="icon" href="https://cardadfar.github.io/stuco_webdev_website/assets/files/cool-icon.png">                    <!-- Insert Icon -->
-    <script src="./HTML file_files/jquery.min.js"></script>
+    <script src="jquery-3.4.1.js"></script>
 </head>
 <body>
 	
@@ -92,10 +92,10 @@
     </div>
 
     <div class="introPar">
-		<p align="Right"> Hi, I'm Serena. I'm a sophomore Statistics major at Carnegie Mellon University in Pittsburgh, Pennsylvania. blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah <br>
-		blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah <br>
-		blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah<br>
-		blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah blah de blah de blah</p>
+		<p align="Right"> (NOT FINISHED!) Hi, I'm Serena. I'm a rising junior at Carnegie Mellon University, double majoring in Statistics and Human-Computer Interaction, and minoring in Media Design. <br>
+		I'm interested in UI/UX research and design. My side passions include drawing (digital in Procreate and traditional), photography (film and digital), and baking. <br>
+		This website is another side project of mine, done in HTML and updated in my github. It's currently a work in progress as I learn more advanced web design! <br>
+		For now I hope you enjoy what I've published and stick around as my website develops along with my experience and pursuits <3. </p>
 	</div>
 
 
